tests/fixtures/invalid/bool_bitxor_bytes.py
# Cannot bitwise XOR Bool and Bytes
x: bool = True ^ b"hello"
